implement empty removeServerAuthModule method.
Signed-off-by: gurunrao <gurunandan.rao@oracle.com>